--- a/Prepro/rapport.tex
+++ b/Prepro/rapport.tex
@@ -73,7 +73,9 @@
 
     \subsection{Compétences}
 
-    Il est nécessaire pour exercer ce métier d’avoir une très bonne expression écrite et orale, une bonne connaissance de l’anglais ou encore de savoir travailler en groupe. Cependant ce ne sont pas les seuls critères, une veille constante des nouvelles technologies est nécessaire pour ne pas reproduire ce qui a déjà été fait ainsi qu’une bonne méthodologie de recherche pour un travail le plus efficace possible. En effet il faut procéder à une formation perpétuelle en se documentant beaucoup sur le travail d’autres chercheurs, cela est d’autant plus vrai en informatique, où les progrès techniques sont extrêmement rapides.
+    Pour exercer ce métier il est préferable d’avoir une très bonne expression écrite et orale, une bonne connaissance de l’anglais ou encore de savoir travailler en groupe. Cependant ce ne sont pas les seuls critères, une veille constante des nouvelles technologies est nécessaire pour ne pas reproduire ce qui a déjà été fait ainsi qu’une bonne méthodologie de recherche pour un travail le plus efficace possible. 
+
+    En effet, il faut procéder à une formation perpétuelle en se documentant sur le travail d’autres chercheurs, cela est d’autant plus vrai en informatique, où les progrès techniques sont extrêmement rapides.
     Savoir entretenir sa curiosité et son esprit critique sont des compétences importantes dans la profession.
 
   \section{Types de tâches à réaliser}
@@ -154,29 +156,26 @@ Lors de cette jounée des métiers, des professionnels sont venus nous présente
 
 Les 3 premières entreprises furent STERIA-SOPRA, CGI (Conseil, Intégration et Outsourcing) et ATOS, toutes des ESN, \emph{Entreprises de Services Numériques}. Celles-ci ont présenté les méthodes de travail de leurs entreprises, elles ont insisté sur le fait que le travail devait être effectué en équipe, la pratique de l'anglais orale étant un point important car les projets peuvent être internationaux, en raison de collaboration avec des sous-traitants étrangers. Par ailleurs, ces entreprises ont bien appuyé sur le fait que un développeur ne passerait pas tout son temps à coder, mais que les phases d'analyse et de gestion de projet en amont étaient aussi très importantes. Ils mirent également l'accent sur leur motivation à embaucher des alternants et des stagiaires dans notre corps de métier.
 
-Nous avons pu aussi entendre le récit de développeurs de ces entreprises qui étaient pour la plupart des anciens étudiants, leur discours étaient unanime, diversité de projet, équipe soudée, ambiance satisfaisante, sous le regard de leurs managers.
+Nous avons pu aussi entendre le récit de développeurs de ces entreprises qui étaient pour la plupart des anciens étudiants, leur discours étaient unanime, diversité de projet, équipe soudée, ambiance satisfaisante, le tout sous le regard de leurs managers.
 
 \section{Après-midi}
 
-\paragraph{Julien Ponge} Maître de conférence à l'INSA Lyon tout en étant développeur au sein de l'entreprise Red Hat. M. \textsc{Ponge} a obtenu une licence et un master à l'Université Blaise Pascal, puis un doctorat à l'Université de Grenoble. Après avoir pratiqué le rôle d'enseignant-chercheur, il s'est rapproché du domaine privé afin d'obtenir une nouvelle expérience, tout en continuant d'enseigner à l'INSA. À Red Hat il travaille sur Vert.x, un framework Java basé sur les évènements, permettant d'obtenir une augmentation des performances.
+\subsection{Conférences}
 
-\paragraph{Valerian Callens} Auditeur des Systèmes d'Informations à la Société Générale nous a présenté son parcours et son métier depuis son lieu de travail en Roumanie. Avant de commencer sa carrière, M. Callens avait fait un V.I.E. (Volontariat International en Entreprise) de deux ans au sein de la Société Générale, cela lui a permit de découvrir la Roumanie, acquérir de l'expérience et vérifier que ce métier lui correspondait bien. Son métier consiste à observer les risques et faire des contrôles, afin de protéger des systèmes d'informations dont il a la charge.
+\subsubsection{Julien Ponge} Maître de conférences à l'INSA Lyon tout en étant développeur au sein de l'entreprise Red Hat. M. \textsc{Ponge} a obtenu une licence et un master à l'Université Blaise Pascal, puis un doctorat à l'Université de Grenoble. Après avoir pratiqué la fonction d'enseignant-chercheur, il s'est rapproché du domaine privé afin d'obtenir une nouvelle expérience, tout en continuant d'enseigner à l'INSA. À Red Hat il travaille sur Vert.x, un framework Java basé sur les évènements, permettant d'obtenir une augmentation des performances.
 
-\paragraph{Frederic Andrès}  JAPON
+\subsubsection{Valerian Callens} Auditeur des Systèmes d'Informations à la Société Générale nous a présenté son parcours et son métier depuis son lieu de travail en Roumanie. Avant de commencer sa carrière, M. Callens avait fait un V.I.E. (Volontariat International en Entreprise) de deux ans au sein de la Société Générale, cela lui a permit de découvrir la Roumanie, acquérir de l'expérience et vérifier que ce métier lui correspondait bien. Son métier consiste à observer les risques et faire des contrôles, afin de protéger des systèmes d'informations dont il a la charge.
+
+\subsubsection{Frederic Andrès} Maître de conférences au NII, \emph{National Institute of Informatics} de Tokyo, nous a presenté son activité dans le département de contenus numériques et les sciences des médias. Il nous a aussi expliqué les démarches nécessaires pour effectuer un stage au NII.
 
 
-% mec qui a parlé du NII japon 
-% Braincube / Société Général (Auditeur des systèmes d'Informations, bénévolat en entreprise lol) / BUSI
+\subsection{Doctorants}
 
-Après ce cycle de conférences, 4 doctorants sont venus présenter leur projet de recherche.
-% aborde eglameent l'interet de faire un these de partir à l'etranger blabla
-
+Après ce cycle de conférences, 2 doctorants sont venus présenter leur projet de recherche.
 
 L'une d'eux, après avoir fait une école Polytechnique suivi d'un Master, effectue sa thèse au sein de Michelin, en tant que salariée, dans le cadre d'une thèse CIFR. Elle travaille sur l'analyse de données télémétriques afin de pouvoir anticiper l'usure des pneus. Étant donné que cette chercheuse est salariée de Michelin, le résultat de ses travaux doivent permettre à Michelin de dégager une valeur ajoutée.
 
-% thèse CIFR
-
-Un autre étudiant travaille sur l'analyse du comportement des vaches, lors de leur repos, ou de leur période d'alimentation, afin de détecter à l'avance si elles vont être malades.
+Un autre étudiant travaille sur l'analyse du comportement des vaches, lors de leur repos, ou de leur période d'alimentation, afin de détecter à l'avance si elles vont être malades. Sa thèse est effectuée en partenariat avec l'INRA qui participe à son financement.
 
 
 \end{document}
