--- a/Prepro/rapport.tex
+++ b/Prepro/rapport.tex
@@ -8,6 +8,7 @@
 \usepackage{hyperref}
 \usepackage{multicol}
 \usepackage[scale=0.8]{geometry}
+\usepackage{fontspec}
 
 \newenvironment{Figure}
   {\par\medskip\noindent\minipage{\linewidth}}
@@ -73,7 +74,7 @@
 
     \subsection{Compétences}
 
-    Pour exercer ce métier il est préferable d’avoir une très bonne expression écrite et orale, une bonne connaissance de l’anglais ou encore de savoir travailler en groupe. Cependant ce ne sont pas les seuls critères, une veille constante des nouvelles technologies est nécessaire pour ne pas reproduire ce qui a déjà été fait ainsi qu’une bonne méthodologie de recherche pour un travail le plus efficace possible. 
+    {\fontspec{Ubuntu}Pour exercer ce métier} il est préferable d’avoir une très bonne expression écrite et orale, une bonne connaissance de l’anglais ou encore de savoir travailler en groupe. Cependant ce ne sont pas les seuls critères, une veille constante des nouvelles technologies est nécessaire pour ne pas reproduire ce qui a déjà été fait ainsi qu’une bonne méthodologie de recherche pour un travail le plus efficace possible. 
 
     En effet, il faut procéder à une formation perpétuelle en se documentant sur le travail d’autres chercheurs, cela est d’autant plus vrai en informatique, où les progrès techniques sont extrêmement rapides.
     Savoir entretenir sa curiosité et son esprit critique sont des compétences importantes dans la profession.
