--- a/ThGraphes/rapport.tex
+++ b/ThGraphes/rapport.tex
@@ -19,6 +19,7 @@
 \usepackage{tkz-graph}
 \usepackage{pgf,tikz}
 \usepackage{mathrsfs}
+% \usepackage{typewriter}
 
 % \usemintedstyle{emacs}
 \newenvironment{Figure}
