--- a/English/report.tex
+++ b/English/report.tex
@@ -1,14 +1,14 @@
-\documentclass[12pt, a4paper]{report}
+\documentclass[12pt, a4paper]{article}
 
 %====================== PACKAGES ======================
 \usepackage{extsizes}
 \usepackage{tikz}
-\usepackage[french]{babel}
+% \usepackage[french]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{hyperref}
 \usepackage{multicol}
 \usepackage[scale=0.8]{geometry}
-\usepackage{fontspec}
+% \usepackage{fontspec}
 
 \newenvironment{Figure}
   {\par\medskip\noindent\minipage{\linewidth}}
@@ -42,14 +42,80 @@
 
 \usepackage[T1]{fontenc}
 
-\author{Loïc \textsc{Castillo} -- Loris \textsc{Croce}}
+\author{Elouan \textsc{Lebaillif} \and Jordan \textsc{Daffix} \and Loris \textsc{Croce}}
 
-\title{\rule{\textwidth}{1pt} \\ \Huge\textbf{Rapport de Pré-professionalisation : } \\ \emph{Enseignant-chercheur} \rule{\textwidth}{1pt}}
+\title{\rule{\textwidth}{1pt} \\ \Huge\textbf{IT Sounds cool : } \\ \emph{English L3} \rule{\textwidth}{1pt}}
 
 \begin{document}
 
 \maketitle{}
 
 \tableofcontents
+
+\section{Introduction}
+
+We are Jordan, Loris and Elouan, students in the third degree in Computer Sciences, at the University Clermont Auvergne.
+
+\paragraph{Why this project}
+We thought some people were boring so we decided to create an headset that could mute them IRL, thats was the first idea...
+
+\section{Description of the project}
+
+Role of each team member :
+
+\begin{itemize}
+    \item Rapport (mise-en-page Loris, rédaction tlm ?)
+    \item Montage vidéo (Jordan)
+    \item Recherche vidéo (tlm)
+    \item Script (Jordan)
+    \item Images application (...?)
+    \item Idea  (Jordan + améliorations autres ?)
+    \item Logo (Elouan)
+    \item Maquette (Elouan)
+\end{itemize}
+
+\section{Description of the product}
+
+    \subsection{Technical description}
+        - casque qui filtre les sons
+        - exemples (prof, )
+
+    \subsection{Physical description}
+
+    images du produit
+colors, dimensions, weight, battery, 
+images de l’application
+=> “Daredevil” vue pour supprimer certaines sources environnantes visibles
+=> Presets
+
+    \subsection{Functional description}
+    Functional description
+image explication filtering
+Works with an external application allowing to custom filters and install some additional ones(\$) 
+
+\section{Script}
+
+Résumé : la vidéo nous montre tout d’abord les sources d’énervements quotidiennes des gens (“n’avez-vous jamais etc.”) ; “Nos scientifiques ont travaillé etc.” (vidéo scientifique + maths) ; “voici notre casque blabla” (images du produit) ; explication comment ça marche ;
+bonheur (vidéo soleil entrepreneuse + vélo ou champ… => liberté) ; slogan.
+
+Vrai script :
+
+N’av
+
+slogan : I.T. Sounds Cool ; (it) sounds cool.
+(ou) :  I.T. Sounds Cool ; sounds cool, isn’t it ?
+
+Sum up : The video shows us first the annoying noises of everyday life (“haven’t you …”). “Our scientists worked…” (scientific video + math) ; “Here’s our new product” (products images) ; How it works, explanations; Happiness (sunny happy people) ; slogan.
+
+
+(vidéo scientifique + vidéo maths)
+Nos scientifiques ont travaillé sur...
+
+exemples sources à supprimer :
+Vidéo OK : prof / bébé / tapotage
+A trouver : mauvaise musique /  personne étudiant / relou
+
+
+% Pas oublier pages perso
 
 \end{document}
