--- a/Algo/rapport.tex
+++ b/Algo/rapport.tex
@@ -8,6 +8,9 @@
 \usepackage{hyperref}
 \usepackage{multicol}
 \usepackage[scale=0.8]{geometry}
+\usepackage{tkz-graph}
+\usepackage{pgf,tikz}
+\usepackage{graphicx}
 % \usepackage{fontspec}
 
 \newenvironment{Figure}
@@ -52,6 +55,8 @@
 
 \tableofcontents
 
+% ajouter manuel build file etc. compilation / execution
+
 \chapter{Gestion de partitions}
 
     \section{TDA Gestion de partition}
@@ -86,8 +91,33 @@
         \item \texttt{p.fusion(c1, c2)} : $\mathcal{O}(1)$, ici implémentée par \texttt{fusion(int c1, int c2)}.
     \end{itemize}
 
-    % \section{Composantes connexes}
-    % \section{Arbres couvrants minimaux}
+    \section{Composantes connexes}
+
+    Pour résoudre le problème des composantes connexes il a été nécessaire de créer une classe \texttt{Graphe} contenant les arêtes sous la forme d'une matrice d'entiers et les sommets sous la forme d'un tableau d'entiers. Il a également fallu surcharger le constructeur de \texttt{TableauPartition} pour qu'il prenne en paramètre un type \texttt{Graphe} et effectue les fusions nécessaires pour que les sommets reliés appartiennent à la même classe, montrant ainsi les composantes connexes du graphe.
+
+    \paragraph{Exemple}
+
+    Un graphe $G$ de la forme :
+
+    \begin{figure}[h]
+        \centering
+        \begin{tikzpicture}[scale=1.75]
+            \GraphInit[vstyle=Normal]
+            \Vertex[x=0,y=1]{0}
+            \Vertex[x=1,y=1]{1}
+            \Vertex[x=0,y=0]{2}
+            \Vertex[x=1,y=0]{3}
+            \tikzset{EdgeStyle/.style={-}}
+            \Edge[style={bend right}](0)(2)
+            \Edge[style={bend left}](1)(3)
+        \end{tikzpicture}
+        % \caption{États d'un processus}
+    \end{figure}
+
+
+    \section{Arbres couvrants minimaux}
+
+
 \chapter{Programmation dynamique}
     \section{Recherche de la distance d'édition}
 
