--- a/Algo/rapport.tex
+++ b/Algo/rapport.tex
@@ -101,18 +101,30 @@
 
     \begin{figure}[h]
         \centering
-        \begin{tikzpicture}[scale=1.75]
+        \begin{tikzpicture}[scale=3]
             \GraphInit[vstyle=Normal]
             \Vertex[x=0,y=1]{0}
             \Vertex[x=1,y=1]{1}
             \Vertex[x=0,y=0]{2}
             \Vertex[x=1,y=0]{3}
             \tikzset{EdgeStyle/.style={-}}
-            \Edge[style={bend right}](0)(2)
-            \Edge[style={bend left}](1)(3)
+            % \Edge[style={bend right}](0)(2)
+            \Edge(0)(2)
+            % \Edge[style={bend left}](1)(3)
+            % \Edge[label=$5$](1)(3)
+            % \Edge(1)(3)
         \end{tikzpicture}
         % \caption{États d'un processus}
     \end{figure}
+
+% \begin{center}
+%     \begin{tikzpicture}
+%         \draw[->] (-1,0) -- (1,0);
+%         \draw (1,0) node[right] {$x$};
+%         \draw [->] (0,-1) -- (0,1);
+%         \draw (0,1) node[above] {$y$};
+%     \end{tikzpicture}
+% \end{center}
 
 
     \section{Arbres couvrants minimaux}
