--- a/Algo/rapport.tex
+++ b/Algo/rapport.tex
@@ -110,6 +110,7 @@
             \tikzset{EdgeStyle/.style={-}}
             % \Edge[style={bend right}](0)(2)
             \Edge(0)(2)
+            \Edge(1)(3)
             % \Edge[style={bend left}](1)(3)
             % \Edge[label=$5$](1)(3)
             % \Edge(1)(3)
@@ -117,20 +118,23 @@
         % \caption{États d'un processus}
     \end{figure}
 
-% \begin{center}
-%     \begin{tikzpicture}
-%         \draw[->] (-1,0) -- (1,0);
-%         \draw (1,0) node[right] {$x$};
-%         \draw [->] (0,-1) -- (0,1);
-%         \draw (0,1) node[above] {$y$};
-%     \end{tikzpicture}
-% \end{center}
+    Donnera un tableau de la forme :
 
+    \begin{table}[h]
+    \centering
+    \label{my-label}
+    \begin{tabular}{|l|l|l|l|l|}
+    \hline
+    \textbf{Valeurs} & 0 & 1 & 2 & 3 \\ \hline
+    \textbf{Classes} & 0 & 1 & 0 & 1 \\ \hline
+    \end{tabular}
+    \end{table}
 
     \section{Arbres couvrants minimaux}
 
+    (...)
 
 \chapter{Programmation dynamique}
     \section{Recherche de la distance d'édition}
-
+        
 \end{document}
